# flight-solver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: rls.rs  wls.rs
comparison/: Makefile.bench  bench_rls.rs  bench_rls_c.c  bench_wls.rs  plot_rls.py  plot_wls.py
src/: givens.rs  lib.rs  types.rs  wls.rs
src/cls/: linalg.rs  mod.rs  solver.rs  types.rs
src/cls/setup/: ls.rs  mod.rs  wls.rs
src/rls/: inverse_qr.rs  mod.rs  standard.rs  types.rs
tests/: cls_setup.rs  rls_cross_check.rs  rls_golden.rs  rls_regression.rs  wls_edge_cases.rs  wls_regression.rs
tests/cls_common/: naive.rs
tests/rls_regression/: golden_cases.rs
